--- a/META.yml
+++ b/META.yml
@@ -17,9 +17,10 @@ meta-spec:
 name: Mojolicious-Plugin-Dotcloud
 requires:
   DotCloud::Environment: 0
+  Mojo::Base: 0
   strict: 0
   warnings: 0
 resources:
   bugtracker: https://github.com/benvanstaveren/mojolicious-plugin-dotcloud/issues
   repository: git://github.com/benvanstaveren/mojolicious-plugin-dotcloud.git
-version: 1.00
+version: 1.01
